Improve storyline (#1)
An improved storyline demo with multiple different steps and a UI to follow progress.

---------

Co-authored-by: rdehuyss <ronald.dehuysser@gmail.com>
Co-authored-by: Roman Gordon <roman@jobrunr.io>